cmake_minimum_required(VERSION 3.26)
project(LeetcodeEverday)

set(CMAKE_CXX_STANDARD 11)

add_executable(LeetcodeEverday main.cpp
        cmake-build-debug/Code/LCP40.cpp
        cmake-build-debug/Code/3128.cpp
        cmake-build-debug/Code/3143.cpp
        cmake-build-debug/Code/Fortnight136Q1.cpp
        cmake-build-debug/Code/Fortnight136Q2.cpp
        cmake-build-debug/Code/Fortnight136Q3.cpp
        cmake-build-debug/Code/572.cpp
        cmake-build-debug/Code/600.cpp
        cmake-build-debug/Code/1295.cpp
        cmake-build-debug/Code/88.cpp
        cmake-build-debug/Code/3131.cpp
        cmake-build-debug/Code/Interview88.cpp
        cmake-build-debug/Code/Interview27.cpp
        cmake-build-debug/Code/interview383.cpp
        cmake-build-debug/Code/Interview205.cpp
        cmake-build-debug/Code/interview290.cpp
        cmake-build-debug/Code/1450.cpp
        cmake-build-debug/Code/2024.cpp
        cmake-build-debug/Code/2708.cpp
        cmake-build-debug/Code/2860.cpp
        cmake-build-debug/Code/3174.cpp
        cmake-build-debug/Code/Interview125.cpp
        cmake-build-debug/Code/977.cpp
        cmake-build-debug/Code/Interview28.cpp
        cmake-build-debug/Code/Interview392.cpp
        cmake-build-debug/Code/168.cpp
        cmake-build-debug/Code/Hot142.cpp
)
